--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "module": "commonjs",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "outDir": "dist",
-    "sourceMap": true,
+    "outDir": "types",
     "lib": [
       "dom",
       "es6"
@@ -16,7 +15,8 @@
     "declaration": true
   },
   "exclude": [
-    "dist",
-    "node_modules"
+    "types",
+    "node_modules",
+    "**/*.spec.ts"
   ]
 }
