--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,16 @@ cache:
 language: node_js
 node_js:
   - "lts/*"
+env:
+  global:
+    - CC_TEST_REPORTER_ID=f3ed06ace38a10b81c3839e03e9f951449c10a2ce8d9dc2ea708389771054a34
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+branches:
+  only:
+  - master
+  - develop
