--- a/package.json
+++ b/package.json
@@ -8,7 +8,25 @@
     "build": "webpack",
     "preversion": "npm test",
     "postversion": "git push && npm publish",
-    "test": "mocha -r ts-node/register test/*.spec.ts && npm run build"
+    "test": "nyc mocha && npm run build"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html",
+      "lcov"
+    ],
+    "sourceMap": true,
+    "instrument": true
   },
   "repository": {
     "type": "git",
@@ -28,7 +46,9 @@
     "app-root-path": "^2.0.1",
     "lodash": "^4.17.4",
     "mocha": "^3.4.2",
+    "nyc": "^11.4.1",
     "pouchdb-adapter-memory": "^6.3.4",
+    "source-map-support": "^0.5.0",
     "ts-loader": "^3.2.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
